Add png to homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/Noodle.png" height="200">
     <a href="./recipes/ButterNoodle.html" target="_blank">Butter Noodles</a>
+    <p></p>
+    <img src="./images/EggRoll.png" height="200">
     <a href="./recipes/EggRoll.html" target="_blank">Egg Roll</a>
 </body>
 </html>
